# crewai-poc

./: README.md
lead_scraper/: README.md  pyproject.toml
lead_scraper/output/: report.md
lead_scraper/src/lead_scraper/: crew.py  main.py
lead_scraper/src/lead_scraper/config/: agents.yaml  tasks.yaml
