[project]
name = "lead_scraper"
version = "0.1.0"
description = "lead_scraper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
lead_scraper = "lead_scraper.main:run"
run_crew = "lead_scraper.main:run"
train = "lead_scraper.main:train"
replay = "lead_scraper.main:replay"
test = "lead_scraper.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
